# Software-Creation_EMIAS

./: .env  docker-compose.yml  package-lock.json  package.json
back/: .env  Dockerfile  Makefile  README.md  dependencies.py  docker-compose.yml  exception_handlers.py  main.py  pyproject.toml
back/alembic/: env.py
back/alembic/versions/: 24012ae40af3_hi.py  39b9d7e4c21d_final.py  664be218c59a_hi.py
back/core/: base_dao.py  config.py  exceptions.py  security.py
back/handlers/: appointment.py  auth.py  doctor.py  profile.py
back/infrastructure/: database.py  scheduler.py
back/models/: __init__.py  appointment.py  base.py  doctor.py  refresh_token.py  user.py
back/repositories/: abstract_token.py  appointment.py  doctor.py  refresh_token.py  user.py
back/schemas/: appointment.py  auth.py  doctor.py  refresh_token.py  user.py
back/services/: appointment.py  auth.py  doctor.py
back/services/jobs/: finish_appointments.py
front/: Dockerfile  README.md  nginx.conf
front/webapp/: package-lock.json  package.json
front/webapp/public/: index.html
front/webapp/public/animations/: health-care.json  time-priority.json
front/webapp/src/: App.js  test_data.js
front/webapp/src/components/: DoctorList.jsx  DoctorList.module.css
front/webapp/src/hooks/: useApi.js  useTelegram.js
front/webapp/src/pages/: AddDoctorPage.jsx  AddDoctorPage.module.css  AdminAppointmentsPage.jsx  AdminAppointmentsPage.module.css  AdminDoctorSelectPage.jsx  AdminDoctorSelectPage.module.css  DoctorSchedulePage.jsx  DoctorSchedulePage.module.css  MainPage.jsx  (+7 more)
nginx/: nginx.conf
